--- a/Plex-PodCast/Views/PodcastCell.xib
+++ b/Plex-PodCast/Views/PodcastCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="466" id="AsA-y7-SUk" customClass="PodcastCell" customModule="Plex_PodCast" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="951" height="466"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="145" id="AsA-y7-SUk" customClass="PodcastCell" customModule="Plex_PodCast" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="347" height="145"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AsA-y7-SUk" id="ZGx-NF-O9l">
-                <rect key="frame" x="0.0" y="0.0" width="951" height="466"/>
+                <rect key="frame" x="0.0" y="0.0" width="347" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appicon" translatesAutoresizingMaskIntoConstraints="NO" id="4J4-vn-4oR">
@@ -22,30 +22,35 @@
                             <constraint firstAttribute="height" constant="100" id="au4-84-aIx"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Track Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFl-P7-JoW">
-                        <rect key="frame" x="128" y="26" width="116" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFQ-N9-9Y5">
-                        <rect key="frame" x="128" y="47" width="116" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Episode Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DaQ-qs-59J">
-                        <rect key="frame" x="128" y="91" width="116" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="dvh-af-X0e">
+                        <rect key="frame" x="132" y="32" width="215" height="81"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFl-P7-JoW">
+                                <rect key="frame" x="0.0" y="0.0" width="215" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.27113655819999999" blue="0.33730201199999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFQ-N9-9Y5">
+                                <rect key="frame" x="0.0" y="31.5" width="215" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.27113655819999999" blue="0.33730201199999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DaQ-qs-59J">
+                                <rect key="frame" x="0.0" y="63" width="215" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.30182470030000003" green="0.4021029538" blue="0.37446489729999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="4J4-vn-4oR" firstAttribute="top" secondItem="ZGx-NF-O9l" secondAttribute="topMargin" constant="8" id="INE-7E-OjJ"/>
+                    <constraint firstItem="dvh-af-X0e" firstAttribute="centerY" secondItem="ZGx-NF-O9l" secondAttribute="centerY" id="LZB-zF-TNi"/>
+                    <constraint firstItem="dvh-af-X0e" firstAttribute="leading" secondItem="4J4-vn-4oR" secondAttribute="trailing" constant="12" id="bqY-GF-Gqv"/>
+                    <constraint firstAttribute="trailing" secondItem="dvh-af-X0e" secondAttribute="trailing" id="nEd-Ce-zaN"/>
                     <constraint firstItem="4J4-vn-4oR" firstAttribute="leading" secondItem="ZGx-NF-O9l" secondAttribute="leadingMargin" id="vqL-1X-OUc"/>
                 </constraints>
             </tableViewCellContentView>
@@ -55,7 +60,7 @@
                 <outlet property="podcastImageView" destination="4J4-vn-4oR" id="LT2-gS-qEY"/>
                 <outlet property="trackNameLabel" destination="cFl-P7-JoW" id="DQ4-7W-yya"/>
             </connections>
-            <point key="canvasLocation" x="268.84057971014494" y="-222.32142857142856"/>
+            <point key="canvasLocation" x="-168.84057971014494" y="-329.79910714285711"/>
         </tableViewCell>
     </objects>
     <resources>
